--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
         
    
-    <title>Hotels</title>
+    <title>Hotel Website | By Prasad Patare</title>
 </head>
 
 <body>
