--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         
    
     <title>Hotel Website | By Prasad Patare</title>
+    <link type="image/png" sizes="16x16" rel="icon" href="./images/icons8-5-star-hotel-48.png">
+    
 </head>
 
 <body>
