--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             </div>
             <div class="carousel-item">
-                <img src="./images/m3.jpeg" class="d-block w-100" alt="...">
+                <img src="./images/hotel2.jpg" class="d-block w-100" alt="...">
 
             </div>
         </div>
