--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col">
             <div class="card h-100 w-100">
                 <div class="inner">
-                    <img src="./images/dish1.jpg" height="300" width="400" class="card-img-top" alt="food dish">
+                    <img src="./images/food2.jpg" height="300" width="400" class="card-img-top" alt="food dish">
                 </div>
 
                 <div class="card-body">
